Added city and aboutMe property in the user model and in documentation
